# tce_sp_teste

./: .gitignore  Dockerfile  README.md  database.py  database_es.py  database_mysql.py  docker-compose.yml  documento.py  main.py  novosgbd.py  pagina_tce_sp_teste.html  parte.py  pyproject.toml  utils.py
tests/: pagina_inicial.html  pagina_tce_sp.html  pagina_teste_func_original.html  pagina_teste_unit.html  tcesp_fun_test.py  tcesp_test.py  tcesp_unit_test.py  utils_test.py
tribunais/: tce_sp.py
